RADV performance sucks with eGPUs
User in GoL discord (cthud#7714) complained about eGPU performance regressing significantly since 2020.
One of the worst issues is that the sam option causes a lot of PCIe traffic for writing stuff from the CPU, reports are that stuff is much faster with nosam. We should probably default to disabling that for eGPUs. (User reported proton version of shadow of the tomb raider going 57 vs. 27 fps between enabling and disabling this option)
Other than that I wonder if there is more stuff that we could minimize bus traffic for. Maybe yeet all commandbuffers and upload buffers through SDMA to VRAM before submission would help more. Maybe we should avoid exposing full CPU visible VRAM?
Not sure if we can do anything about descriptors yet, and if the app does specific stuff for its allocations that is hard to change.